# svg2svgt

./: .gitignore  CMakeLists.txt  README.md
cli/: CMakeLists.txt  cmdlineparser.cpp  cmdlineparser.h  main.cpp
gui/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  conversiontask.cpp  conversiontask.h  existingfiledialog.h  exportdialog.cpp  exportdialog.h  exporttask.cpp  exporttask.h  main.cpp  mainwindow.cpp  mainwindow.h  svg2svgt.appdata.xml  svg2svgt.desktop  svglistitemdelegate.cpp  svglistitemdelegate.h  task.h
locale/: locale.pro  svg2svgt_en.ts  svg2svgt_fi.ts
svg2svgt/: CMakeLists.txt  emptynoderemoverstep.cpp  emptynoderemoverstep.h  errorcodes.h  fillconverterstep.cpp  fillconverterstep.h  gradientprocessorstep.cpp  gradientprocessorstep.h  logger.cpp  logger.h  nodefilterstep.cpp  nodefilterstep.h  nodefinder.cpp  nodefinder.h  nodewalker.h  opacityconverterstep.cpp  opacityconverterstep.h  pathconverterstep.cpp  pathconverterstep.h  processorengine.cpp  processorengine.h  processorstep.h  ruleengine.cpp  ruleengine.h  statisticsprocessorstep.cpp  statisticsprocessorstep.h  stylesheetconverterstep.cpp  stylesheetconverterstep.h  svg2svgt.pc.in  tracer.cpp  tracer.h  validationstep.cpp  validationstep.h
test/: CMakeLists.txt  run_tests.bat  run_tests.sh
